@@ -15,8 +15,5 @@
 /*_mj.py
 /.idea/*
 build
-hahm/unignore
-tests/hahm/unignore
-tests/hahm/unignore
-hahm/unignore
-hahm/unignore
+
+unignore
