@@ -46,6 +46,7 @@ from hahomematic.const import (
     TYPE_FLOAT,
     TYPE_INTEGER,
     TYPE_STRING,
+    UNIGNORE_AND_ALWAYS_SHOW_PARAMETERS,
     UNIGNORE_PARAMETERS_BY_DEVICE,
 )
 from hahomematic.devices import entity_definition_exists, get_device_funcs
@@ -748,7 +749,7 @@ class HmDevice:
     def _parameter_is_unignored(self, paramset: str, parameter: str) -> bool:
         """Return if parameter is on unignore list"""
         if paramset == PARAMSET_VALUES:
-            if (
+            if parameter in UNIGNORE_AND_ALWAYS_SHOW_PARAMETERS or (
                 self._central.custom_unignore_parameters
                 and parameter in self._central.custom_unignore_parameters
             ):
