@@ -5,6 +5,7 @@ Version 0.30.2 (2022-02-05)
 - Remove INHIBIT from ignore parameter list
 - Add support for unignore file
 - Make PROCESS a binary_sensor
+- Add DIRECTION & ACTIVITY_STATE to cover (is_opening, is_closing)
 
 Version 0.30.1 (2022-02-04)
 - Start hub earlier
